--- a/src/app/Fornitore/modifica-fornitore/modifica-fornitore.component.html
+++ b/src/app/Fornitore/modifica-fornitore/modifica-fornitore.component.html
@@ -44,7 +44,7 @@
       <button type="submit" class="btn-save">
         <i class="pi pi-save"></i> Salva Modifiche
       </button>
-      <button type="button" class="btn-cancel" (click)="annullaModifica()">
+      <button type="button" class="btn-cancel" (click)="annullaModifica($event)">
         <i class="pi pi-times"></i> Annulla
       </button>
     </div>
