--- a/src/app/Magazzino/aggiungi-magazzino/aggiungi-magazzino.component.html
+++ b/src/app/Magazzino/aggiungi-magazzino/aggiungi-magazzino.component.html
@@ -1,8 +1,6 @@
-<div>
+<div class="container">
   <h2>Aggiungi Magazzino</h2>
-  
 
-  <!-- Form con controlli di validazione -->
   <form [formGroup]="magazzinoForm" (submit)="aggiungiMagazzino()">
     <div class="form-group">
       <label for="nome">Nome:</label>
