--- a/src/app/OrdineCliente/ordine-cliente/ordine-cliente.component.css
+++ b/src/app/OrdineCliente/ordine-cliente/ordine-cliente.component.css
@@ -1,46 +1,51 @@
+/* Stile per il contenitore principale */
+div {
+  max-width: 100%; /* Diventa largo quanto la pagina */
+  margin: 0 auto;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
+/* Stile per il titolo */
+h1 {
+  font-size: 24px;
+  margin-bottom: 20px;
+  color: #6b4e3a; /* Colore marroncino scuro */
+  text-align: center;
+}
+
 /* Stile per la tabella */
 table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
-  
-  table, th, td {
-    border: 1px solid #ddd;
-  }
-  
-  th, td {
-    padding: 10px;
-    text-align: left;
-  }
-  
-  /* Stile per l'intestazione della tabella */
-  thead {
-    background-color: #f2f2f2;
-  }
-  
-  /* Stile per le righe dispari della tabella */
-  tbody tr:nth-child(odd) {
-    background-color: #f9f9f9;
-  }
-  
-  /* Stile per il pulsante */
-  button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: #fff;
-    border: none;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #0056b3;
-  }
-  
-  /* Stile per il messaggio Nessun ordine trovato */
-  p {
-    font-style: italic;
-    color: #888;
-    margin-top: 10px;
-  }
-  
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+table, th, td {
+  border: 1px solid #d7b899; /* Bordo leggero */
+}
+
+th, td {
+  padding: 10px;
+  text-align: left;
+}
+
+/* Stile per l'intestazione della tabella */
+thead {
+  background-color: #f2f2f2;
+}
+
+/* Stile per le righe dispari della tabella */
+tbody tr:nth-child(odd) {
+  background-color: #e6d3bf; /* Colore marroncino chiaro per le righe della tabella */
+}
+
+/* Stile per il messaggio Nessun ordine trovato */
+p {
+  font-style: italic;
+  color: #888;
+  margin-top: 10px;
+}
