aggiunta del prodotto

--- a/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.css
+++ b/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.css
@@ -4,8 +4,8 @@ div {
     max-width: 50vh;
     margin: 0 auto;
     padding: 20px;
-    background-color: #f7f7f7;
-    border: 1px solid #ccc;
+    background-color: #d7b899;;
+    border: 2px solid #6b4e3a;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
