--- a/src/app/Prodotto/prodotti/prodotti.component.html
+++ b/src/app/Prodotto/prodotti/prodotti.component.html
@@ -5,7 +5,7 @@
       <th>Marca</th>
       <th>Descrizione</th>
       <th>Prezzo</th>
-      <th>Partita IVA</th>
+      <th>IVA</th>
       <th>Quantità</th>
     </tr>
   </thead>
@@ -17,7 +17,7 @@
         <td><strong>Marca:</strong> {{ prodotto.marca }}</td>
         <td><strong>Descrizione:</strong> {{ prodotto.descrizione }}</td>
         <td><strong>Prezzo:</strong> {{ prodotto.prezzo }}</td>
-        <td><strong>Partita IVA:</strong> {{ prodotto.iva }}</td>
+        <td><strong>IVA:</strong> {{ prodotto.iva }}</td>
         <td><strong>Quantità:</strong> {{ prodotto.quantita }}</td>
         <td>
           <!-- Aggiungi un pulsante per attivare l'eliminazione -->
