--- a/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.html
+++ b/src/app/Fornitore/aggiungi-fornitore/aggiungi-fornitore.component.html
@@ -2,7 +2,7 @@
   <h2>Aggiungi Fornitore</h2>
 
   <!-- Form per l'aggiunta del fornitore -->
-  <form (submit)="aggiungiFornitore()">
+  <form (submit)="aggiungiFornitore()" class="horizontal-form">
 
 
 
