--- a/src/app/Fornitore/modifica-fornitore/modifica-fornitore.component.html
+++ b/src/app/Fornitore/modifica-fornitore/modifica-fornitore.component.html
@@ -42,10 +42,10 @@
 
     <div class="button-group">
       <button type="submit" class="btn-save">
-        <i class="pi pi-save"></i> Salva Modifiche
+        <i class="pi pi-save"></i> SALVA
       </button>
       <button type="button" class="btn-cancel" (click)="annullaModifica($event)">
-        <i class="pi pi-times"></i> Annulla
+        <i class="pi pi-times"></i> ANNULLA
       </button>
     </div>
   </form>
