--- a/src/app/Prodotto/prodotti/prodotti.component.html
+++ b/src/app/Prodotto/prodotti/prodotti.component.html
@@ -1,3 +1,33 @@
+<div class="elenco-magazzini">
+  <h2>Elenco Prodotti</h2>
+
+  <!-- Pulsante per aprire/chiudere il form di ricerca -->
+  <button class="btn btn-cerca" (click)="toggleRicerca()">
+    <i class="pi pi-search"></i> Cerca Prodotti
+  </button>
+
+  <!-- Form di ricerca (inizialmente nascosto) -->
+  <div class="form-ricerca" *ngIf="mostraFormRicerca">
+    <h3>Ricerca Prodotti</h3>
+    <form [formGroup]="searchForm" (ngSubmit)="ricercaProdotto()">
+      <div class="form-group">
+        <label for="nome">Nome:</label>
+        <input type="text" id="nome" formControlName="nome">
+      </div>
+      <div class="form-group">
+        <label for="descrizione">Descrizione:</label>
+        <input type="text" id="descrizione" formControlName="descrizione">
+      </div>
+      <div class="form-group">
+        <label for="prezzo">Prezzo:</label>
+        <input type="number" id="prezzo" formControlName="prezzo">
+      </div>
+      <button type="submit" class="btn btn-ricerca">
+        <i class="pi pi-search"></i> Esegui Ricerca
+      </button>
+    </form>
+  </div>
+
 <table class="table">
   <thead>
     <tr>
@@ -21,9 +51,11 @@
         <td><strong>Quantità:</strong> {{ prodotto.quantita }}</td>
         <td>
           <!-- Aggiungi un pulsante per attivare l'eliminazione -->
-          <button class="pi pi-file-edit custom-green-icon" (click)="modificaProdotto(i)"></button>
+          <button class="btn-primary" (click)="modificaProdotto(i)">
+            <i class="pi pi-file-edit"></i></button>
           <!-- Aggiungi un pulsante per attivare l'eliminazione -->
-          <button class="pi pi-trash custom-red-icon" (click)="rimuoviProdotto(prodotto)"></button>
+          <button class="btn-danger" (click)="rimuoviProdotto(prodotto)">
+            <i class="pi pi-trash"></i></button>
         </td>
       </tr>
       <!-- Visualizza il form di modifica quando si modifica il magazzino corrente -->
