--- a/src/app/Prodotto/modifica-prodotto/modifica-prodotto.component.html
+++ b/src/app/Prodotto/modifica-prodotto/modifica-prodotto.component.html
@@ -24,9 +24,12 @@
     </div>
     <div class="form-group">
       <label for="iva">IVA:</label>
-      <input type="text" id="iva" [(ngModel)]="prodotto.iva" name="iva">
-      <!-- Aggiungi qui le verifiche per l'IVA -->
-    </div>
+      <select id="iva" [(ngModel)]="prodotto.iva" name="iva">
+        <option value="4">4%</option>
+        <option value="10">10%</option>
+        <option value="22">22%</option>
+      </select>
+    </div>    
     <div class="form-group">
       <label for="quantita">Quantità:</label>
       <input type="number" id="quantita" [(ngModel)]="prodotto.quantita" name="quantita">
