--- a/src/app/Prodotto/modifica-prodotto/modifica-prodotto.component.css
+++ b/src/app/Prodotto/modifica-prodotto/modifica-prodotto.component.css
@@ -30,6 +30,16 @@ div {
     border: 1px solid #ccc;
     border-radius: 5px;
   }
+
+  .iva-select{
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+    text-align: center;
+  }
   
   /* Stile per il pulsante "Salva Modifiche" */
   .btn-primary {
