--- a/src/app/Prodotto/modifica-prodotto/modifica-prodotto.component.html
+++ b/src/app/Prodotto/modifica-prodotto/modifica-prodotto.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="form-group">
       <label for="iva">IVA:</label>
-      <select id="iva" [(ngModel)]="prodotto.iva" name="iva">
+      <select id="iva" [(ngModel)]="prodotto.iva" name="iva" class="iva-select">
         <option value="4">4%</option>
         <option value="10">10%</option>
         <option value="22">22%</option>
