--- a/src/app/Prodotto/add-prodotto/add-prodotto.component.html
+++ b/src/app/Prodotto/add-prodotto/add-prodotto.component.html
@@ -45,14 +45,14 @@
         <div *ngIf="prodottoForm.get('quantita')?.hasError('pattern')">Il campo Quantità deve essere un numero intero positivo.</div>
       </div>
     </div>
+    
     <div class="form-group">
       <label for="iva">IVA:</label>
-      <input type="number" id="iva" name="iva" formControlName="iva">
-      <div *ngIf="prodottoForm.get('iva')?.invalid && prodottoForm.get('iva')?.touched">
-        <div *ngIf="prodottoForm.get('iva')?.hasError('required')">Il campo IVA è obbligatorio.</div>
-        <div *ngIf="prodottoForm.get('iva')?.hasError('minlength')">Il campo IVA deve avere minimo 11 cifre.</div>
-        <div *ngIf="prodottoForm.get('iva')?.hasError('maxlength')">Il campo IVA deve avere massimo 11 cifre.</div>
-      </div>
+      <select id="iva" name="iva" formControlName="iva" class="iva-select">
+        <option value="4">4%</option>
+        <option value="10">10%</option>
+        <option value="22">22%</option>
+      </select>
     </div>
 
     <div class="form-group">
