--- a/src/app/Magazzino/magazzini/magazzini.component.html
+++ b/src/app/Magazzino/magazzini/magazzini.component.html
@@ -1,38 +1,36 @@
 <div class="elenco-magazzini">
   <h2>Elenco Magazzini</h2>
 
-  <!-- Pulsante per aprire/chiudere il form di ricerca -->
   <button class="btn btn-cerca" (click)="toggleRicerca()">
     <i class="pi pi-search"></i> Cerca Magazzini
   </button>
-
-  <!-- Form di ricerca (inizialmente nascosto) -->
   <div class="form-ricerca" *ngIf="mostraFormRicerca">
     <h3>Ricerca Magazzini</h3>
-    <form [formGroup]="searchForm" (ngSubmit)="ricercaMagazzini()">
-      <div class="form-group">
-        <label for="nome">Nome:</label>
-        <input type="text" id="nome" formControlName="nome">
+    <form [formGroup]="searchForm" (ngSubmit)="ricercaMagazzini()" class="search-form">
+      <div class="form-row">
+        <div class="form-group">
+          <label for="nome">Nome:</label>
+          <input type="text" id="nome" formControlName="nome">
+        </div>
+        <div class="form-group">
+          <label for="indirizzo">Indirizzo:</label>
+          <input type="text" id="indirizzo" formControlName="indirizzo">
+        </div>
+        <div class="form-group">
+          <label for="sede">Sede:</label>
+          <input type="text" id="sede" formControlName="sede">
+        </div>
+        <div class="form-group">
+          <label for="capacitaMassima">Capacità Massima:</label>
+          <input type="number" id="capacitaMassima" formControlName="capacitaMassima">
+        </div>
+        <button type="submit" class="btn btn-ricerca">
+          <i class="pi pi-search"></i> Esegui Ricerca
+        </button>
       </div>
-      <div class="form-group">
-        <label for="indirizzo">Indirizzo:</label>
-        <input type="text" id="indirizzo" formControlName="indirizzo">
-      </div>
-      <div class="form-group">
-        <label for="sede">Sede:</label>
-        <input type="text" id="sede" formControlName="sede">
-      </div>
-      <div class="form-group">
-        <label for="capacitaMassima">Capacità Massima:</label>
-        <input type="number" id="capacitaMassima" formControlName="capacitaMassima">
-      </div>
-      <button type="submit" class="btn btn-ricerca">
-        <i class="pi pi-search"></i> Esegui Ricerca
-      </button>
     </form>
   </div>
-
-  <!-- Tabella degli Magazzini -->
+  
   <div class="table-responsive">
     <table class="table">
       <thead>
@@ -47,7 +45,7 @@
       <tbody>
         <ng-container *ngFor="let magazzino of magazzini; let i = index">
           <tr class="magazzino">
-            <td><strong>Nome:</strong> <span class="nome-magazzino">{{ magazzino.nome }}</span></td>
+            <td><strong>Nome:</strong> {{ magazzino.nome }}</td>
             <td><strong>Indirizzo:</strong> {{ magazzino.indirizzo }}</td>
             <td><strong>Sede:</strong> {{ magazzino.sede }}</td>
             <td><strong>Capacità Massima:</strong> {{ magazzino.capacitaMassima }}</td>
@@ -60,7 +58,6 @@
               </button>
             </td>
           </tr>
-          <!-- Include il componente EliminaMagazzinoComponent solo se magazzinoDaEliminareIndex è definito -->
           <tr *ngIf="i === magazzinoDaEliminareIndex ">
             <td colspan="5">
               <app-elimina-magazzino 
@@ -70,7 +67,6 @@
               </app-elimina-magazzino>
             </td>
           </tr>
-          <!-- Visualizza il form di modifica quando si modifica il magazzino corrente -->
           <tr *ngIf="i === magazzinoDaModificareIndex">
             <td colspan="5">
               <app-modifica-magazzino
