--- a/src/app/Magazzino/modifica-magazzino/modifica-magazzino.component.html
+++ b/src/app/Magazzino/modifica-magazzino/modifica-magazzino.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="magazzino">
+<div *ngIf="magazzino" class="modifica-magazzino">
   <h2>Modifica Magazzino</h2>
-  <form>
+  <form class="form-row">
     <div class="form-group">
       <label for="nome">Nome:</label>
       <input type="text" id="nome" [(ngModel)]="magazzino.nome" name="nome" required>
@@ -17,15 +17,15 @@
       <label for="capacitaMassima">Capacità Massima:</label>
       <input type="number" id="capacitaMassima" [(ngModel)]="magazzino.capacitaMassima" name="capacitaMassima" required>
     </div>
-
-    <div class="button-group">
-      <button type="button" class="btn salva" (click)="salvaModifiche()">
-        <i class="pi pi-save"></i> Salva Modifiche
-      </button>
-      <button type="button" class="btn annulla" (click)="annulla()">
-        <i class="pi pi-times"></i> Annulla
-      </button>
-    </div>
-    
   </form>
+
+  <!-- Wrapper per i pulsanti -->
+  <div class="button-wrapper">
+    <button type="button" class="btn salva" (click)="salvaModifiche()">
+      <i class="pi pi-save"></i> Salva Modifiche
+    </button>
+    <button type="button" class="btn annulla" (click)="annulla()">
+      <i class="pi pi-times"></i> Annulla
+    </button>
+  </div>
 </div>
